--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,8 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/assets",
-              "src/favicon.ico"
+              "src/favicon.ico",
+              "src/_redirects"
             ],
             "styles": [
               "src/styles.scss"
